# cff2coins

./: CITATION.cff  README.md  pyproject.toml
src/cff2coins/: __init__.py
src/cff2coins/models/: cff_coin_span.py  cff_coin_span_json_decoder.py  cff_coin_span_json_encoder.py
tests/: utils.py
tests/from_cff_file/: test_from_cff_file.py
tests/from_cff_file/cff_file_with_references/: expected.json
tests/from_cff_file/cff_file_without_references/: expected.json
tests/from_cff_file/empty_cff_file/: exception.json
tests/from_html_file/: test_from_html_file.py
tests/from_html_file/single_non_empty_coins_span/: expected.json
tests/references/: test_references.py
tests/references/with_references/: input.cff
tests/references/without_references/: input.cff
tests/to_html_file/: test_to_html_file.py
tests/to_html_file/cff_coin_span_with_references/: expected.html  input.json
tests/to_html_string/: test_to_html_string.py
tests/to_html_string/cff_coin_span_with_references/: input.json
tests/to_html_string/cff_coin_span_without_references/: input.json
